Modifique archivo api.js para que todos los endpoints tengan el mismo forma, les agregue try-catch

--- a/Proyecto TP/frontend/html/alimentacion.html
+++ b/Proyecto TP/frontend/html/alimentacion.html
@@ -69,7 +69,7 @@
                 return response.json();
             }).then((data) => { // una vez que consulta vuelve con la data
                 const table = document.querySelector("tbody");
-                data.forEach(Alimento => {
+                data.data.forEach(Alimento => {
                     const newRow = document.createElement("tr");
 
                     const DiaSemana = document.createElement("td"); 
