--- a/Proyecto TP/frontend/html/ejercicios.html
+++ b/Proyecto TP/frontend/html/ejercicios.html
@@ -378,10 +378,10 @@
             fetch(arma_rutinaBackURL)
             .then((response) => response.json())
             .then((data) => {
-                document.getElementById("titulo-ejercicios").textContent = `${data.dia_semana}`; /*especifica el dia del entrenamiento como titulo*/
+                document.getElementById("titulo-ejercicios").textContent = `${data.data.dia_semana}`; /*especifica el dia del entrenamiento como titulo*/
                 const tbody = document.querySelector("table.table tbody");
 
-                data.ejercicios.forEach((ej) => {
+                data.data.ejercicios.forEach((ej) => {
                 const newRow = document.createElement("tr");
                 newRow.setAttribute("data-id",ej.id)
 
