Cambie algo en el style.css, borre el archivo docs.txt

--- a/Proyecto TP/frontend/html/quienes_somos.html
+++ b/Proyecto TP/frontend/html/quienes_somos.html
@@ -37,26 +37,26 @@
                 <div class="quienes_somos-infoBox">
                     <h1 class="quienes_somos-h1">Somos Atlas+</h1>
                     <p>
-                        En Atlas+ creemos que el fitness va más allá del entrenamiento. Somos una plataforma dedicada a ayudarte a alcanzar tu mejor versión, física y mentalmente.<br><br> Nuestro equipo combina experiencia en entrenamiento, nutrición y bienestar para ofrecerte rutinas adaptadas a tus objetivos, organizarlas de manera eficiente y acompañarte con un plan de alimentación que potencie tus resultados.  <br><br> Tanto si estás comenzando como si buscás llevar tu entrenamiento al siguiente nivel, en Atlas+ encontrás la motivación, el conocimiento y la comunidad que necesitás para lograrlo. <br><br> Transformá tu rutina. Transformá tu vida. Bienvenido a Atlas+.
+                        En Atlas+ creemos que el fitness va más allá del entrenamiento. Somos una plataforma dedicada a ayudarte a alcanzar tu mejor versión, física y mentalmente.<br><br> Nuestro equipo combina experiencia en entrenamiento, nutrición y bienestar para que puedas seguir tu entrenamiento con una rutina personalizada adaptada a tus objetivos, organizala de manera eficiente y seguila con un plan de alimentación que potencie tus resultados.  <br><br> Tanto si estás comenzando como si buscás llevar tu entrenamiento al siguiente nivel, en Atlas+ encontrás la motivación, el conocimiento y la comunidad que necesitás para lograrlo. <br><br> Transformá tu rutina. Transformá tu vida. Bienvenido a Atlas+.
                     </p>
                 </div>
                 <div class="quienes_somos-second-box">
                     <h1 class="quienes_somos-h1">Porque Elegirnos</h1>
                     <div id="quienes_somos-second-contenedor">
                         <div class="box">
-                            <h3>Rutinas hechas para vos</h3>
+                            <h3>Rutinas personalizadas</h3>
                             <p>Entrenamientos personalizados que se adaptan a tu nivel, tus objetivos y tu ritmo de vida.</p>
                             <i class="fas fa-dumbbell icono"></i>
                         </div>
                         <div class="box">
                             <h3>Organización eficiente</h3>
-                            <p>Te ayudamos a planificar tu semana con una estructura clara de ejercicios y progresos.</p>
-                            <i class="fas fa-clipboard-list icono"></i>
+                            <p>Planifica tu semana con una estructura clara de ejercicios y progresos.</p>
+                            <i class="fas fa-clipboard-list icono" id="icono-organizacion"></i>
                         </div>    
                         <div class="box">
                             <h3>Dieta que acompaña</h3>
                             <p>Incluí una alimentación alineada con tu entrenamiento para obtener mejores resultados.</p>
-                            <i class="fas fa-bowl-food icono"></i>
+                            <i class="fas fa-bowl-food icono" id="icono-dieta"></i>
                         </div>
                     </div>
                 </div>
