Hice cambios en Quienes somos y en el Index, cambie una imagen, algunos estilos y texto mas coherente

--- a/Proyecto TP/frontend/html/index.html
+++ b/Proyecto TP/frontend/html/index.html
@@ -60,7 +60,7 @@
             </div>
             <section class="tarjeta-section">
                     <div class="tarjeta-info">
-                        <p class="tarjeta-info-text">Tomá el control de tu tiempo y progresá de forma constante con una rutina adaptada a vos.
+                        <p class="tarjeta-info-text">Tomá el control de tu tiempo y progresá de forma constante con un control preciso sobre tu rutina. 
                         ¡Entrená con propósito y alcanzá resultados reales!</p>
                         <!-- Hay que cambiar esto y el linkeo ! -->
                         <button class="tarjeta-info-btn" onclick="window.location.href='arma_rutina.html'">ORGANIZA TU RUTINA</button>
@@ -69,7 +69,7 @@
                         <img src="https://images.unsplash.com/photo-1734668487893-d686f3c8d0cf?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjJ8fGVudHJlbmFkb3IlMjBhcm1hbmRvJTIwcnV0aW5hfGVufDB8fDB8fHww" alt="imagen de entrenamiento">
                     </div>
                     <div class="tarjeta-img" >
-                        <img src="https://www.gndiario.com/sites/default/files/noticias/tuppers-comida-saludable.jpg" alt="imagen de comida saludable">
+                        <img src="https://us.123rf.com/450wm/rosinka79/rosinka791505/rosinka79150500371/39384250-la-harina-de-avena-en-un-plato-negro-sobre-balanza-digital-que-muestra-de-100-gramos.jpg?ver=6" alt="imagen de comida saludable">
                     </div>
                     <div class="tarjeta-info" >
                         <p class="tarjeta-info-text">Comé de forma inteligente y alineá tu alimentación con tus objetivos físicos y de salud.
