--- a/Proyecto TP/frontend/html/quienes_somos.html
+++ b/Proyecto TP/frontend/html/quienes_somos.html
@@ -37,25 +37,33 @@
                 <div class="quienes_somos-infoBox">
                     <h1 class="quienes_somos-h1">Somos Atlas+</h1>
                     <p>
-                        En Atlas+ creemos que el fitness va más allá del entrenamiento. Somos una plataforma dedicada a ayudarte a alcanzar tu mejor versión, física y mentalmente.<br><br> Nuestro equipo combina experiencia en entrenamiento, nutrición y bienestar para que puedas seguir tu entrenamiento con una rutina personalizada adaptada a tus objetivos, organizala de manera eficiente y seguila con un plan de alimentación que potencie tus resultados.  <br><br> Tanto si estás comenzando como si buscás llevar tu entrenamiento al siguiente nivel, en Atlas+ encontrás la motivación, el conocimiento y la comunidad que necesitás para lograrlo. <br><br> Transformá tu rutina. Transformá tu vida. Bienvenido a Atlas+.
+                        En Atlas+ creemos que el fitness comienza con el control. <br><br>
+
+                        Somos una plataforma diseñada para que entrenes de forma inteligente: podés crear tu rutina personalizada, registrar cada ejercicio con peso, repeticiones, descanso y RIR, y tener el control total de tu progreso.<br><br>
+
+                        También te ayudamos a potenciar tus resultados desde lo nutricional, permitiéndote anotar tus macros diarios —proteínas, carbohidratos y grasas— de forma clara y organizada.<br><br>
+
+                        Tanto si estás dando tus primeros pasos como si querés optimizar tu rendimiento, en Atlas+ tenés una herramienta práctica, profesional y pensada para evolucionar junto con vos.<br><br>
+
+                        Organizá tu rutina. Monitoreá tus métricas. Alineá tu alimentación. Bienvenido a Atlas+.
                     </p>
                 </div>
                 <div class="quienes_somos-second-box">
                     <h1 class="quienes_somos-h1">Porque Elegirnos</h1>
                     <div id="quienes_somos-second-contenedor">
                         <div class="box">
-                            <h3>Rutinas personalizadas</h3>
-                            <p>Entrenamientos personalizados que se adaptan a tu nivel, tus objetivos y tu ritmo de vida.</p>
+                            <h3>Rutina inteligente</h3>
+                            <p>Anotá tus ejercicios, series, repeticiones, peso, descanso y RIR en un solo lugar. Llevá un control preciso de tu entrenamiento y adaptalo según tu progreso.</p>
                             <i class="fas fa-dumbbell icono"></i>
                         </div>
                         <div class="box">
                             <h3>Organización eficiente</h3>
-                            <p>Planifica tu semana con una estructura clara de ejercicios y progresos.</p>
+                            <p>Planeá tu semana con una rutina estructurada, visualizá tu avance y gestioná cada sesión para entrenar con foco y constancia.</p>
                             <i class="fas fa-clipboard-list icono" id="icono-organizacion"></i>
                         </div>    
                         <div class="box">
-                            <h3>Dieta que acompaña</h3>
-                            <p>Incluí una alimentación alineada con tu entrenamiento para obtener mejores resultados.</p>
+                            <h3>Seguimiento nutricional</h3>
+                            <p>Registrá tus macros diarios —proteínas, grasas y carbohidratos— y alineá tu alimentación con tus objetivos de entrenamiento.</p>
                             <i class="fas fa-bowl-food icono" id="icono-dieta"></i>
                         </div>
                     </div>
