--- a/Proyecto TP/frontend/html/comidas.html
+++ b/Proyecto TP/frontend/html/comidas.html
@@ -269,9 +269,6 @@
                 } else if (calorias < 0  || proteinas < 0 || carbohidratos < 0 || grasas < 0) {
                     alert("Las calorias, proteinas, grasas y los carbohidratos deben ser números positivos.");
                     return; 
-                } else if (isNaN(calorias) || isNaN(proteinas) || isNaN(carbohidratos) || isNaN(grasas)) {
-                    alert("Las calorias, proteinas, grasas y los carbohidratos deben ser números válidos.");
-                    return; 
                 } 
 
                 const datos = {
@@ -346,9 +343,6 @@
                     return; 
                 } else if (caloriasEdit < 0  || proteinasEdit < 0 || carbohidratosEdit < 0 || grasasEdit < 0) {
                     alert("Las calorias, proteinas, grasas y los carbohidratos deben ser números positivos.");
-                    return; 
-                } else if (isNaN(caloriasEdit) || isNaN(proteinasEdit) || isNaN(carbohidratosEdit) || isNaN(grasasEdit)) {
-                    alert("Las calorias, proteinas, grasas y los carbohidratos deben ser números válidos.");
                     return; 
                 } 
 
@@ -433,8 +427,12 @@
                 //ejercicio.innerHTML = com.ejercicio_relacionado ?? "-";        HAY QUE VER SI LO USAMOS
                 //newRow.appendChild(ejercicio); 
 
-                const descripcion = document.createElement("td");
-                descripcion.innerHTML = com.descripcion ?? "-";
+                const descripcion = document.createElement("td"); // descripcion
+                descripcion.innerHTML = com.descripcion && com.descripcion.trim() !== ""
+                    ? (com.descripcion.length > 40 
+                        ? com.descripcion.slice(0, 40) + "..." 
+                        : com.descripcion)
+                    : "-"; // si son mas de 40 caracteres, corta y agrega "..."
                 newRow.appendChild(descripcion);
 
                 const NewEditar = document.createElement("td");
