--- a/Proyecto TP/frontend/html/comidas.html
+++ b/Proyecto TP/frontend/html/comidas.html
@@ -221,7 +221,8 @@
                 </div>
             </footer>
         </div>
-        <script>
+        <script type="module">
+            import {RUTAS} from "../constantes/rutas.mjs"
             const urlParams = new URLSearchParams(window.location.search);
             const id = urlParams.get("id");
             tablaComidas();
@@ -286,7 +287,7 @@
                 };
 
                 try {
-                    const respuesta = await fetch("http://localhost:3000/api/alimentacion", {
+                    const respuesta = await fetch(`${RUTAS.ALIMENTACION}`, {
                         method: "POST",
                         headers: { "Content-Type": "application/json" },
                         body: JSON.stringify(datos)
@@ -307,7 +308,7 @@
 
             const actualizarComida = async (idComida, datos) => {
                 try {
-                    const respuesta = await fetch(`http://localhost:3000/api/alimentacion/${idComida}`, {
+                    const respuesta = await fetch(`${RUTAS.ALIMENTACION}/${idComida}`, {
                         method: "PUT",
                         headers: { "Content-Type": "application/json" },
                         body: JSON.stringify(datos)
@@ -392,7 +393,7 @@
             function tablaComidas(){
             document.getElementsByClassName("comida-table")[0].innerHTML = ""; // limpia la tabla antes de cargarla
 
-            const arma_rutinaBackURL = "http://localhost:3000/api/entrenamientos/" + id;
+            const arma_rutinaBackURL = `${RUTAS.ENTRENAMIENTOS}/${id}`;
 
             fetch(arma_rutinaBackURL)
             .then((response) => response.json())
@@ -477,7 +478,7 @@
         }    
 
         function deleteComida(entrenamiento_id, alimentacion_id) {
-            const arma_rutinaBackURL = `http://localhost:3000/api/entrenamientos/${entrenamiento_id}/alimentacion/${alimentacion_id}`;
+            const arma_rutinaBackURL = `${RUTAS.ENTRENAMIENTOS}/${entrenamiento_id}/alimentacion/${alimentacion_id}`;
             fetch(arma_rutinaBackURL, {method: 'DELETE'}).then(() => tablaComidas()); // vuelve a cargar la tabla
         }
     
