--- a/Proyecto TP/frontend/html/ejercicios.html
+++ b/Proyecto TP/frontend/html/ejercicios.html
@@ -295,6 +295,7 @@
         </div>
     <script type="module">
         import { AbrirModalEditar } from "../js/ejercicios.mjs"
+        import {RUTAS} from "../constantes/rutas.mjs"
         const urlParams = new URLSearchParams(window.location.search);
         const id = urlParams.get("id");
         tablaEjercicios();
@@ -348,7 +349,7 @@
             };
 
             try {
-                const respuesta = await fetch("http://localhost:3000/api/ejercicios", {
+                const respuesta = await fetch(`${RUTAS.EJERCICIOS}`, {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify(datos)
@@ -370,7 +371,7 @@
         function tablaEjercicios(){
             document.getElementsByClassName("ejercicio-table")[0].innerHTML = ""; // limpia la tabla antes de cargarla
         
-            const arma_rutinaBackURL = "http://localhost:3000/api/entrenamientos/" + id;
+            const arma_rutinaBackURL = `${RUTAS.ENTRENAMIENTOS}/${id}`;
 
             fetch(arma_rutinaBackURL)
             .then((response) => response.json())
@@ -463,7 +464,7 @@
     }
 
     function deleteEjercicio(entrenamiento_id, rutina_id){
-        const arma_rutinaBackURL = `http://localhost:3000/api/entrenamientos/${entrenamiento_id}/ejercicios/${rutina_id}`;
+        const arma_rutinaBackURL = `${RUTAS.ENTRENAMIENTOS}/${entrenamiento_id}/ejercicios/${rutina_id}`;
         fetch(arma_rutinaBackURL, {method: 'DELETE'}).then(() => tablaEjercicios()); // vuelve a cargar la tabla
 }
 
