Cambios en Validaciones

--- a/Proyecto TP/frontend/html/comidas.html
+++ b/Proyecto TP/frontend/html/comidas.html
@@ -73,7 +73,7 @@
                         <label class="label">Tipo</label>
                         <div class="control">
                             <div class="select is-fullwidth">
-                                <select name="tipo_comida" id="tipo_comida">
+                                <select name="tipo_comida" id="tipo_comida" required>
                                     <option value="" disabled selected>Seleccioná un Tipo de comida</option>
                                     <option value="Desayuno">Desayuno</option>
                                     <option value="Almuerzo">Almuerzo</option>
@@ -149,7 +149,7 @@
                         <label class="label">Tipo</label>
                         <div class="control">
                             <div class="select is-fullwidth">
-                                <select name="tipo_comida" id="tipo_comida">
+                                <select name="tipo_comida" id="tipo_comida" required>
                                     <option value="" disabled selected>Seleccioná un Tipo de comida</option>
                                     <option value="Desayuno">Desayuno</option>
                                     <option value="Almuerzo">Almuerzo</option>
