Modifiqué la estructura para que el deploy funcione correctamente

--- a/Proyecto TP/frontend/alimentacion.html
+++ b/Proyecto TP/frontend/alimentacion.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
          <!-- CSS -->
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>Alimentacion</title>
     </head>
     <body>
@@ -63,7 +63,7 @@
             </footer>
         </div>
         <script type="module">
-            import {RUTAS} from "../constantes/rutas.mjs"
+            import {RUTAS} from "constantes/rutas.mjs"
             const arma_rutinaBackURL = `${RUTAS.EJERCICIOS}`;
             
 
