--- a/Proyecto TP/frontend/arma_rutina.html
+++ b/Proyecto TP/frontend/arma_rutina.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
          <!-- CSS -->
-        <link rel="stylesheet" href="../css/style.css?v=1.2"> 
+        <link rel="stylesheet" href="css/style.css?v=1.2"> 
         <!-- ?v=1.2 agregado porque no me funcionaba el css en localhost:8080-->
         <title>Arma rutina</title>
     </head>
@@ -230,8 +230,8 @@
         </div>
     <script type="module">
 
-        import { PatchOneById } from "../utils/APIFetch.mjs";
-        import {RUTAS} from "../constantes/rutas.mjs"
+        import { PatchOneById } from "utils/APIFetch.mjs";
+        import {RUTAS} from "constantes/rutas.mjs"
         tablaEntrenos();
 
         //AGREGAR ENTRENAMIENTO
