--- a/Proyecto TP/frontend/ejercicios.html
+++ b/Proyecto TP/frontend/ejercicios.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
         <!-- CSS -->
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>Arma rutina</title>
     </head>
     <body>
@@ -294,8 +294,8 @@
             </footer>
         </div>
     <script type="module">
-        import { AbrirModalEditar } from "../js/ejercicios.mjs"
-        import {RUTAS} from "../constantes/rutas.mjs"
+        import { AbrirModalEditar } from "js/ejercicios.mjs"
+        import {RUTAS} from "constantes/rutas.mjs"
         const urlParams = new URLSearchParams(window.location.search);
         const id = urlParams.get("id");
         tablaEjercicios();
