--- a/Proyecto TP/frontend/arma_rutina.html
+++ b/Proyecto TP/frontend/arma_rutina.html
@@ -230,8 +230,8 @@
         </div>
     <script type="module">
 
-        import { PatchOneById } from "utils/APIFetch.mjs";
-        import {RUTAS} from "constantes/rutas.mjs"
+        import { PatchOneById } from "./utils/APIFetch.mjs";
+        import {RUTAS} from "./constantes/rutas.mjs"
         tablaEntrenos();
 
         //AGREGAR ENTRENAMIENTO
