--- a/Proyecto TP/frontend/ejercicios.html
+++ b/Proyecto TP/frontend/ejercicios.html
@@ -294,8 +294,8 @@
             </footer>
         </div>
     <script type="module">
-        import { AbrirModalEditar } from "js/ejercicios.mjs"
-        import {RUTAS} from "constantes/rutas.mjs"
+        import { AbrirModalEditar } from "./js/ejercicios.mjs"
+        import {RUTAS} from "./constantes/rutas.mjs"
         const urlParams = new URLSearchParams(window.location.search);
         const id = urlParams.get("id");
         tablaEjercicios();
