--- a/Proyecto TP/frontend/comidas.html
+++ b/Proyecto TP/frontend/comidas.html
@@ -222,7 +222,7 @@
             </footer>
         </div>
         <script type="module">
-            import {RUTAS} from "constantes/rutas.mjs"
+            import {RUTAS} from "./constantes/rutas.mjs"
             const urlParams = new URLSearchParams(window.location.search);
             const id = urlParams.get("id");
             tablaComidas();
