Cambios en algunas validaciones

--- a/Proyecto TP/frontend/html/arma_rutina.html
+++ b/Proyecto TP/frontend/html/arma_rutina.html
@@ -113,9 +113,9 @@
                                     </div> 
                                     <div class="control">
                                         <div class="select">
-                                            <select name="unidad" id="unidad">
-                                                <option value="Min">Min</option>
-                                                <option value="Hs">Hs</option>
+                                            <select name="unidad" required>
+                                                <option value="min">Min</option>
+                                                <option value="hs">Hs</option>
                                             </select>
                                         </div>
                                     </div>
@@ -193,7 +193,7 @@
                                     </div> 
                                     <div class="control">
                                         <div class="select">
-                                            <select name="unidad">
+                                            <select name="unidad" required>
                                                 <option value="min">Min</option>
                                                 <option value="hs">Hs</option>
                                             </select>
