--- a/Proyecto TP/frontend/html/ejercicios.html
+++ b/Proyecto TP/frontend/html/ejercicios.html
@@ -130,7 +130,7 @@
                     <div class="field">
                         <label class="label">RIR</label>
                         <div class="control">
-                            <input class="input" type="number" name="rir" required>
+                            <input class="input" type="number" name="rir">
                         </div>
                     </div>
 
@@ -242,7 +242,7 @@
                     <div class="field">
                         <label class="label">RIR</label>
                         <div class="control">
-                            <input class="input" type="number" name="rir" required>
+                            <input class="input" type="number" name="rir">
                         </div>
                     </div>
 
