--- a/Proyecto TP/frontend/alimentacion.html
+++ b/Proyecto TP/frontend/alimentacion.html
@@ -64,7 +64,7 @@
         </div>
         <script type="module">
             import {RUTAS} from "./constantes/rutas.mjs"
-            const arma_rutinaBackURL = `${RUTAS.EJERCICIOS}`;
+            const arma_rutinaBackURL = `${RUTAS.ENTRENAMIENTOS}`;
             
 
             fetch(arma_rutinaBackURL).then((response) => { // se va a consultar al back
